--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,6 @@
         <title>Git demo</title>
     </head>
     <body>
-        <p>This is index page.</p>
+        <p>This is index page - for feature1.</p>
     </body>
 </html>
