--- a/Index.html
+++ b/Index.html
@@ -5,5 +5,6 @@
     <body>
         <p>This is index page - for feature1.</p>
         <p>This is index page - Master Feature.</p>
+        <p>Feature 2 is added.</p>
     </body>
 </html>
