Added comment for Feature 4

--- a/Feature4.html
+++ b/Feature4.html
@@ -8,5 +8,6 @@
 <body>
     <p>Feature 4</p>
     <p>This is Feature 4</p>
+    <p>This featue will be available after Feature 3.</p>
 </body>
 </html>
