Added imp message for Feature 4

--- a/Feature4.html
+++ b/Feature4.html
@@ -9,5 +9,6 @@
     <p>Feature 4</p>
     <p>This is Feature 4</p>
     <p>This featue will be available after Feature 3.</p>
+    <p>This will be a revolutionary feature for the application.</p>
 </body>
 </html>
